--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -66,3 +66,18 @@ Executable lp2ys
      FunctionalDependencies
      GeneralizedNewtypeDeriving
 
+Executable dimacs2lp
+  Main-is: dimacs2lp.hs
+  HS-Source-Dirs: src
+  Other-Modules:
+     LPFile
+     Util
+  Build-Depends: base >=4 && <5, mtl, containers, array, parsec, bytestring, parse-dimacs
+  Extensions:
+     BangPatterns
+     ScopedTypeVariables
+     FlexibleInstances
+     MultiParamTypeClasses
+     FunctionalDependencies
+     GeneralizedNewtypeDeriving
+
