--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -93,3 +93,10 @@ Executable pb2lp
      LPFile
      PBFile
   Build-Depends: base >=4 && <5, mtl, containers, array, parsec
+
+Executable toysat
+  Main-is: toysat.hs
+  HS-Source-Dirs: src
+  Other-Modules:
+     SAT
+  Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs
