--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -98,4 +98,6 @@ Executable toysat
   HS-Source-Dirs: src
   Other-Modules:
      SAT
+     LPFile
+     PBFile
   Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs
