--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -102,6 +102,6 @@ Executable toysat
      SAT
      LPFile
      PBFile
-  Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs, priority-queue
+  Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs, priority-queue, vector
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
