--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -103,5 +103,7 @@ Executable toysat
      LPFile
      PBFile
   Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs, priority-queue, vector
+  Extensions:
+     BangPatterns
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
