--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -100,6 +100,7 @@ Executable toysat
   HS-Source-Dirs: src
   Other-Modules:
      SAT
+     LBool
      LPFile
      PBFile
   Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs, priority-queue, vector
