--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -103,7 +103,7 @@ Executable toysat
      LBool
      LPFile
      PBFile
-  Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs, priority-queue, vector
+  Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, parse-dimacs, priority-queue
   Extensions:
      BangPatterns
   if impl(ghc >= 7)
