--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -103,6 +103,7 @@ Executable toysat
      LPFile
      PBFile
      PriorityQueue
+     Linearizer
   Build-Depends: base >=4 && <5, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue
   Extensions:
      MultiParamTypeClasses
