--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -104,7 +104,7 @@ Executable toysat
      PBFile
      PriorityQueue
      Linearizer
-  Build-Depends: base >=4 && <5, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue
+  Build-Depends: base >=4 && <5, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue, OptDir
   Extensions:
      MultiParamTypeClasses
      FlexibleInstances
@@ -116,4 +116,4 @@ Test-suite TestSAT
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
   Main-is:           TestSAT.hs
-  Build-depends:     test-framework,test-framework-hunit,HUnit
+  Build-depends:     test-framework,test-framework-hunit,HUnit,OptDir
