toysat: allow bounded integer variables in LP file

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -106,6 +106,7 @@ Executable toysat
      PBFile
      IndexedPriorityQueue
      Linearizer
+     SAT.Integer
   Build-Depends: base >=4 && <5, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue, OptDir, time, old-locale
   Extensions:
      MultiParamTypeClasses
