--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -121,4 +121,11 @@ Test-suite TestSAT
   HS-Source-Dirs:    src
   Main-is:           TestSAT.hs
   Build-depends:     test-framework,test-framework-th,test-framework-hunit,HUnit,OptDir
-  Extensions: TemplateHaskell
+  Extensions: TemplateHaskell, DoAndIfThenElse
+
+Test-suite TestSimplex2
+  Type:              exitcode-stdio-1.0
+  HS-Source-Dirs:    src
+  Main-is:           TestSimplex2.hs
+  Build-depends:     test-framework,test-framework-th,test-framework-hunit,HUnit,OptDir
+  Extensions: TemplateHaskell, DoAndIfThenElse
