--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -40,6 +40,7 @@ Executable toysolver
      OmegaTest
      Simplex
      Simplex2
+     MIPSolver2
      Util
   Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir
   Extensions:
