--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -42,6 +42,7 @@ Executable toysolver
      Simplex2
      MIPSolver2
      Util
+     Version
   Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir
   Extensions:
      BangPatterns
@@ -109,6 +110,7 @@ Executable toysat
      SeqQueue
      Linearizer
      SAT.Integer
+     Version
   Build-Depends: base >=4 && <5, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue, OptDir, time, old-locale
   Extensions:
      MultiParamTypeClasses
