--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -43,7 +43,7 @@ Executable toysolver
      MIPSolver2
      Util
      Version
-  Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir
+  Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir, stm >=2.3
   Extensions:
      BangPatterns
      ScopedTypeVariables
@@ -52,6 +52,8 @@ Executable toysolver
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      DoAndIfThenElse
+  if impl(ghc)
+    GHC-Options: -threaded
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
 
