--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -22,6 +22,10 @@ Extra-Source-Files:
    samples/wbo/*.wbo
 Build-Type: Simple
 
+Flag ForceChar8
+  Description: set default encoding to char8 (not to use iconv)
+  Default: False
+
 source-repository head
   type:     git
   location: git://github.com/msakai/toysolver.git
@@ -87,6 +91,9 @@ Executable toysat
      CPP
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
+  if flag(ForceChar8) && impl(ghc)
+    Build-Depends: base >=4.5
+    CPP-OPtions: "-DFORCE_CHAR8"
 
 Executable lp2yices
   Main-is: lp2yices.hs
