add naive implementation of polynomials and Buchberger's algorithm

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -12,6 +12,7 @@ Extra-Source-Files:
    README.md
    COPYING
    src/TseitinEncode.hs
+   src/Polynomial.hs
    samples/lp/*.lp
    samples/lp/error/*.lp
    samples/maxsat/*.cnf
