--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -14,6 +14,7 @@ Extra-Source-Files:
    src/TseitinEncode.hs
    src/ContiTraverso.hs
    src/Data/Polynomial.hs
+   src/Data/Polynomial/Sturm.hs
    src/Data/AlgebraicNumber.hs
    src/Data/Polyhedron.hs
    samples/lp/*.lp
