--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -160,6 +160,13 @@ Test-suite TestSimplex2
   Build-depends:     base >=4 && <5, containers, deepseq, queue, test-framework,test-framework-th,test-framework-hunit,HUnit,OptDir
   Extensions: TemplateHaskell, DoAndIfThenElse
 
+Test-suite TestMIPSolver2
+  Type:              exitcode-stdio-1.0
+  HS-Source-Dirs:    src
+  Main-is:           TestMIPSolver2.hs
+  Build-depends:     base >=4 && <5, containers, deepseq, queue, test-framework, test-framework-th, test-framework-hunit, HUnit, OptDir, stm
+  Extensions: TemplateHaskell, DoAndIfThenElse
+
 Test-suite TestPolynomial
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
