--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -14,6 +14,8 @@ Extra-Source-Files:
    src/TseitinEncode.hs
    src/ContiTraverso.hs
    src/Data/Polynomial.hs
+   src/Data/Polynomial/FactorZ.hs
+   src/Data/Polynomial/Lagrange.hs
    src/Data/Polynomial/Sturm.hs
    src/Data/AlgebraicNumber.hs
    src/Data/Polyhedron.hs
