separate printing functions from toysat.hs into SAT.Printer module

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -94,6 +94,7 @@ Executable toysat
      SAT.Integer
      SAT.Types
      SAT.TheorySolver
+     SAT.Printer
      Version
   Build-Depends: base >=4 && <5, mtl, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue, OptDir, time, old-locale
   Extensions:
