--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -14,6 +14,7 @@ Extra-Source-Files:
    src/TseitinEncode.hs
    src/ContiTraverso.hs
    src/Data/Polynomial.hs
+   src/Data/Polynomial/GBase.hs
    src/Data/Polynomial/FactorZ.hs
    src/Data/Polynomial/Graeffe.hs
    src/Data/Polynomial/Lagrange.hs
