implement normal strategy for Buchberger algorithm

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -179,7 +179,7 @@ Test-suite TestPolynomial
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
   Main-is:           TestPolynomial.hs
-  Build-depends:     base >=4 && <5, containers, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Build-depends:     base >=4 && <5, containers, heaps, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
   Extensions: TemplateHaskell, DoAndIfThenElse
 
 Test-suite TestInterval
