--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -21,6 +21,7 @@ Extra-Source-Files:
    src/Data/Polynomial/Sturm.hs
    src/Data/AlgebraicNumber.hs
    src/Data/Polyhedron.hs
+   src/TestAReal2.hs
    src/pbverify.hs
    src/pigeonhole.hs
    samples/gcnf/*.gcnf
@@ -187,4 +188,11 @@ Test-suite TestInterval
   HS-Source-Dirs:    src
   Main-is:           TestInterval.hs
   Build-depends:     base >=4 && <5, containers, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Extensions: TemplateHaskell, DoAndIfThenElse
+
+Test-suite TestAReal
+  Type:              exitcode-stdio-1.0
+  HS-Source-Dirs:    src
+  Main-is:           TestAReal.hs
+  Build-depends:     base >=4 && <5, containers, heaps, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
   Extensions: TemplateHaskell, DoAndIfThenElse
