--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -195,5 +195,5 @@ Test-suite TestAReal
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
   Main-is:           TestAReal.hs
-  Build-depends:     base >=4 && <5, containers, heaps, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Build-depends:     base >=4 && <5, containers, heaps, primes, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
   Extensions: TemplateHaskell, DoAndIfThenElse
