--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -99,7 +99,7 @@ Executable toysat
      SAT.TheorySolver
      SAT.Printer
      Version
-  Build-Depends: base >=4 && <5, mtl, containers >= 0.4.2, array, parsec, bytestring, parse-dimacs, queue, OptDir, time, old-locale
+  Build-Depends: base >=4 && <5, mtl, containers >= 0.4.2, array, random, parsec, bytestring, parse-dimacs, queue, OptDir, time, old-locale
   Extensions:
      MultiParamTypeClasses
      FlexibleInstances
@@ -160,7 +160,7 @@ Test-suite TestSAT
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
   Main-is:           TestSAT.hs
-  Build-depends:     base >=4 && <5, array, containers, queue, test-framework,test-framework-th,test-framework-hunit,HUnit,OptDir
+  Build-depends:     base >=4 && <5, array, containers, random, queue, test-framework,test-framework-th,test-framework-hunit,HUnit,OptDir
   Extensions: TemplateHaskell, DoAndIfThenElse
 
 Test-suite TestSimplex2
