--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -133,6 +133,8 @@ Executable cnf2lp
   HS-Source-Dirs: src
   Other-Modules:
      Text.LPFile
+     Converter.CNF2LP
+     Converter.ObjType
      Util
   Build-Depends: base >=4 && <5, mtl, containers, array, parsec, bytestring, parse-dimacs, OptDir
   Extensions:
@@ -154,6 +156,8 @@ Executable pb2lp
   Other-Modules:
      Text.LPFile
      Text.PBFile
+     Converter.PB2LP
+     Converter.ObjType
   Build-Depends: base >=4 && <5, mtl, containers, array, parsec, OptDir
 
 Test-suite TestSAT
