--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -93,6 +93,7 @@ Executable toysat
      Data.SeqQueue
      Text.LPFile
      Text.PBFile
+     Text.MaxSAT
      SAT
      Linearizer
      SAT.Integer
@@ -149,7 +150,10 @@ Executable cnf2lp
 Executable maxsat2lp
   Main-is: maxsat2lp.hs
   HS-Source-Dirs: src
-  Build-Depends: base >=4 && <5, containers
+  Other-Modules:
+     SAT.Types
+     Text.MaxSAT
+  Build-Depends: base >=4 && <5, containers, array
 
 Executable pb2lp
   Main-is: pb2lp.hs
