--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -23,6 +23,7 @@ Extra-Source-Files:
    src/Data/Polynomial/Sturm.hs
    src/Data/AlgebraicNumber.hs
    src/Data/AlgebraicNumber/Root.hs
+   src/Data/AlgebraicNumber/RealInstance.hs
    src/Data/Polyhedron.hs
    src/Text/SDPFile.hs
    src/TestAReal2.hs
