--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -134,6 +134,30 @@ Executable toysat
     Build-Depends: base >=4.5
     CPP-OPtions: "-DFORCE_CHAR8"
 
+Executable toyfmf
+  Main-is: toyfmf.hs
+  HS-Source-Dirs: src
+  Other-Modules:
+     Data.LBool
+     Data.IndexedPriorityQueue
+     Data.SeqQueue
+     FOLModelFinder
+     SAT
+     SAT.Types
+     Version
+  Build-Depends: base >=4 && <5, mtl, containers >= 0.4.2, array, random, queue, logic-TPTP
+  Extensions:
+     BangPatterns
+     DoAndIfThenElse
+     DoRec
+     ScopedTypeVariables
+     CPP
+     TypeSynonymInstances
+     FlexibleInstances
+  if impl(ghc >= 7)
+    GHC-Options: -rtsopts
+  GHC-Prof-Options: -auto-all
+
 Executable lp2yices
   Main-is: lp2yices.hs
   HS-Source-Dirs: src
