--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -272,6 +272,13 @@ Test-suite TestAReal
   Build-depends:     base >=4 && <5, containers, heaps, primes, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
   Extensions: TemplateHaskell, DoAndIfThenElse
 
+Test-suite TestQE
+  Type:              exitcode-stdio-1.0
+  HS-Source-Dirs:    src
+  Main-is:           TestQE.hs
+  Build-depends:     base >=4 && <5, containers, deepseq, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Extensions: TemplateHaskell, DoAndIfThenElse
+
 Test-suite TestLPFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
