--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -276,7 +276,7 @@ Test-suite TestQE
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    src
   Main-is:           TestQE.hs
-  Build-depends:     base >=4 && <5, containers, deepseq, OptDir, stm, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Build-depends:     base >=4 && <5, mtl, containers, deepseq, heaps, primes, OptDir, stm, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
   Extensions: TemplateHaskell, DoAndIfThenElse
 
 Test-suite TestLPFile
