implement Minimally Unsatisfiable Subset (MUS) solver in toysat command

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -121,6 +121,7 @@ Executable toysat
      Text.LPFile
      Text.PBFile
      Text.MaxSAT
+     Text.GCNF
      SAT
      SAT.Integer
      SAT.TseitinEncoder
