--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -25,6 +25,7 @@ Extra-Source-Files:
    src/Data/AlgebraicNumber/Root.hs
    src/Data/Polyhedron.hs
    src/FOLModelFinder.hs
+   src/Text/MPSFile.hs
    src/Text/SDPFile.hs
    src/TestAReal2.hs
    src/pbverify.hs
