integrate MPS parser into toysat command

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -122,6 +122,7 @@ Executable toysat
      Data.SeqQueue
      Text.LPFile
      Text.PBFile
+     Text.MPSFile
      Text.MaxSAT
      Text.GCNF
      Text.GurobiSol
