--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -128,6 +128,7 @@ Executable toysat
      Text.GurobiSol
      SAT
      SAT.Integer
+     SAT.MUS
      SAT.TseitinEncoder
      SAT.Types
      SAT.TheorySolver
