--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -134,7 +134,7 @@ Executable toysat
      SAT.TheorySolver
      SAT.Printer
      Version
-  Build-Depends: base >=4 && <5, mtl, containers >= 0.4.2, array, random, parsec, bytestring, filepath, parse-dimacs, queue, OptDir, time, old-locale
+  Build-Depends: base >=4 && <5, mtl, containers >= 0.4.2, array, random, parsec, bytestring, filepath, parse-dimacs, queue, OptDir, time, old-locale, unbounded-delays
   Extensions:
      MultiParamTypeClasses
      FlexibleInstances
